--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,20 +1,20 @@
 galaxy_info:
-  author: Matt Prahl
+  author: Matt Prahl + Vitexus
   description: automates the installation and configuration of Postfix and Dovecot with SQL authentication
   license: MIT
   min_ansible_version: 2.0
+  role_name: postfix_dovecot
+  namespace: vitexus
   platforms:
-  - name: Ubuntu
-    versions:
-    - trusty
-    - xenial
-  - name: EL
-    versions:
-      - 7
-      - 8
+    - name: Ubuntu
+      versions:
+        - focal
+        - jammy
+    - name: EL
+      versions:
+        - 7
+        - 8
   galaxy_tags:
   - dovecot
   - postfix
-  - mysql
-
 dependencies: []
