--- a/tasks/postfix.yml
+++ b/tasks/postfix.yml
@@ -1,95 +1,93 @@
 ---
 - name: POSTFIX | install packages
-  package:
+  ansible.builtin.package:
     name: "{{ pkg_postfix }}"
     state: present
-  notify: restart postfix
+  notify: Restart postfix
 
 - name: POSTFIX | ensure Postfix is started and runs at startup
-  service:
+  ansible.builtin.service:
     name: postfix
     state: started
     enabled: yes
 
 - name: POSTFIX | configure (main.cf)
-  template:
+  ansible.builtin.template:
     src: etc/postfix/main.cf.j2
     dest: /etc/postfix/main.cf
     owner: root
     group: root
     mode: 0644
-  notify: restart postfix
+  notify: Restart postfix
 
 - name: POSTFIX | configure (master.cf)
-  template:
+  ansible.builtin.template:
     src: etc/postfix/master.cf.j2
     dest: /etc/postfix/master.cf
     owner: root
     group: root
     mode: 0644
-  notify: restart postfix
+  notify: Restart postfix
 
 - name: POSTFIX | configure (mysql-virtual-alias-maps.cf)
-  template:
+  ansible.builtin.template:
     src: etc/postfix/mysql-virtual-alias-maps.cf.j2
     dest: /etc/postfix/mysql-virtual-alias-maps.cf
     owner: root
     group: root
     mode: 0640
-  notify: restart postfix
+  notify: Restart postfix
 
 - name: POSTFIX | configure (mysql-virtual-mailbox-domains.cf)
-  template:
+  ansible.builtin.template:
     src: etc/postfix/mysql-virtual-mailbox-domains.cf.j2
     dest: /etc/postfix/mysql-virtual-mailbox-domains.cf
     owner: root
     group: root
     mode: 0640
-  notify: restart postfix
+  notify: Restart postfix
 
 - name: POSTFIX | configure (mysql-virtual-mailbox-maps.cf)
-  template:
+  ansible.builtin.template:
     src: etc/postfix/mysql-virtual-mailbox-maps.cf.j2
     dest: /etc/postfix/mysql-virtual-mailbox-maps.cf
     owner: root
     group: root
     mode: 0640
-  notify: restart postfix
+  notify: Restart postfix
 
 - name: POSTFIX | configure (helo_access)
-  copy:
+  ansible.builtin.copy:
     src: postfix_helo_access
     dest: /etc/postfix/helo_access
 
 - name: POSTFIX | postmap /etc/postfix/helo_access (generate /etc/postfix/helo_access.db)
-  command: postmap /etc/postfix/helo_access
-  notify: restart postfix
+  ansible.builtin.command: postmap /etc/postfix/helo_access
+  notify: Restart postfix
 
 - name: POSTFIX | Create A Whitelist rbl (/etc/postfix/rbl_override)
-  copy:
+  ansible.builtin.copy:
     src: postgrey-rbl_override
     dest: /etc/postfix/rbl_override
 
 - name: POSTFIX | postmap /etc/postfix/rbl_override (generate /etc/postfix/rbl_override.db)
-  command: postmap /etc/postfix/rbl_override
-  notify: restart postfix
-
-
+  ansible.builtin.command: postmap /etc/postfix/rbl_override
+  notify: Restart postfix
 
 - name: POSTFIX | set the default domain name to be used (/etc/mailname)
-  copy:
+  ansible.builtin.copy:
     content: "{{ postfix_default_domain + '\n' }}"
     dest: /etc/mailname
     owner: root
     group: root
     mode: 0644
-  notify: restart postfix
+  notify: Restart postfix
   when: postfix_default_domain is defined
 
 - name: POSTFIX | On Red Hat servers, copy /etc/services to chroot
   block:
     - name: POSTFIX
-      copy:
+      ansible.builtin.copy:
         src: /etc/services
         dest: /var/spool/postfix/etc/services
         remote_src: yes
